force-app/main/default/objects/Expense_Line_Item__c/fields/Accounting_Reference__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Reference__c</fullName>
    <label>Accounting Reference #</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>