force-app/main/default/objects/Expense_Line_Item__c/fields/Branch_Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Branch_Expense_Type__c</fullName>
    <label>Branch Employee Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airfare GL60350</fullName>
            </value>
            <value>
                <fullName>Auto Allowance GL60350</fullName>
            </value>
            <value>
                <fullName>Auto Rental GL60350</fullName>
            </value>
            <value>
                <fullName>Auto Repair GL60125</fullName>
            </value>
            <value>
                <fullName>Cell Phone Allowance GL60350</fullName>
            </value>
            <value>
                <fullName>Customer Education GL60375</fullName>
            </value>
            <value>
                <fullName>Customer Entertainment GL60355</fullName>
            </value>
            <value>
                <fullName>Customer Meals GL60355</fullName>
            </value>
            <value>
                <fullName>Customer Relations GL50120</fullName>
            </value>
            <value>
                <fullName>Employee Meals GL60355</fullName>
            </value>
            <value>
                <fullName>Events GL50120</fullName>
            </value>
            <value>
                <fullName>Fuel GL60350</fullName>
            </value>
            <value>
                <fullName>Home/Trade Shows GL60360</fullName>
            </value>
            <value>
                <fullName>Local Cab/Bus GL60350</fullName>
            </value>
            <value>
                <fullName>Lodging GL60350</fullName>
            </value>
            <value>
                <fullName>Membership Dues GL60210</fullName>
            </value>
            <value>
                <fullName>Mileage GL60350</fullName>
            </value>
            <value>
                <fullName>Other GLTBD</fullName>
            </value>
            <value>
                <fullName>Parking GL60350</fullName>
            </value>
            <value>
                <fullName>Postage GL60280</fullName>
            </value>
            <value>
                <fullName>Professional Development GL60220</fullName>
            </value>
            <value>
                <fullName>Showroom Expense GL60450</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>