force-app/main/default/objects/Expense_Line_Item__c/fields/Corporate_Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Expense_Type__c</fullName>
    <label>Corporate Employee Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airfare GL60330</fullName>
            </value>
            <value>
                <fullName>Auto Allowance GL60330</fullName>
            </value>
            <value>
                <fullName>Auto Rental GL60330</fullName>
            </value>
            <value>
                <fullName>Auto Repair GL60125</fullName>
            </value>
            <value>
                <fullName>Cell Phone Allowance GL60330</fullName>
            </value>
            <value>
                <fullName>Customer Education GL60375</fullName>
            </value>
            <value>
                <fullName>Customer Entertainment GL60335</fullName>
            </value>
            <value>
                <fullName>Customer Meals GL60335</fullName>
            </value>
            <value>
                <fullName>Customer Relations GL50120</fullName>
            </value>
            <value>
                <fullName>Employee Meals GL60335</fullName>
            </value>
            <value>
                <fullName>Events GL50120</fullName>
            </value>
            <value>
                <fullName>Fuel GL60330</fullName>
            </value>
            <value>
                <fullName>Home/Trade Shows GL60360</fullName>
            </value>
            <value>
                <fullName>Local Cab/Bus GL60330</fullName>
            </value>
            <value>
                <fullName>Lodging GL60330</fullName>
            </value>
            <value>
                <fullName>Membership Dues GL60210</fullName>
            </value>
            <value>
                <fullName>Mileage GL60330</fullName>
            </value>
            <value>
                <fullName>Other GLTBD</fullName>
            </value>
            <value>
                <fullName>Parking GL60330</fullName>
            </value>
            <value>
                <fullName>Postage GL60280</fullName>
            </value>
            <value>
                <fullName>Professional Development GL60220</fullName>
            </value>
            <value>
                <fullName>Showroom Expense GL60450</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>