force-app/main/default/objects/Expense_Line_Item__c/fields/Description_Comment_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Description_Comment_Attendees__c</fullName>
    <label>Description/Comment/Attendees</label>
    <type>TextArea</type>
</CustomField>