force-app/main/default/objects/Expense_Line_Item__c/fields/Details_of_Other_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Other_Expenses__c</fullName>
    <label>Expense Details</label>
    <length>120</length>
    <type>Text</type>
</CustomField>