force-app/main/default/objects/Expense_Line_Item__c/fields/Executive_Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Executive_Expense_Type__c</fullName>
    <inlineHelpText>Expense codes for members of the Executive Team ONLY</inlineHelpText>
    <label>Executive Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airfare GL60340</fullName>
            </value>
            <value>
                <fullName>Auto Allowance GL60340</fullName>
            </value>
            <value>
                <fullName>Auto Rental GL60340</fullName>
            </value>
            <value>
                <fullName>Auto Repair GL60125</fullName>
            </value>
            <value>
                <fullName>Cell Phone Allowance GL60340</fullName>
            </value>
            <value>
                <fullName>Customer Education GL60375</fullName>
            </value>
            <value>
                <fullName>Customer Entertainment GL60345</fullName>
            </value>
            <value>
                <fullName>Customer Meals GL60345</fullName>
            </value>
            <value>
                <fullName>Customer Relations GL50120</fullName>
            </value>
            <value>
                <fullName>Employee Meals GL60345</fullName>
            </value>
            <value>
                <fullName>Events GL50120</fullName>
            </value>
            <value>
                <fullName>Fuel GL60340</fullName>
            </value>
            <value>
                <fullName>Home/Trade Shows GL60360</fullName>
            </value>
            <value>
                <fullName>Local Cab/Bus GL60340</fullName>
            </value>
            <value>
                <fullName>Lodging GL60340</fullName>
            </value>
            <value>
                <fullName>Membership Dues GL60210</fullName>
            </value>
            <value>
                <fullName>Mileage GL60340</fullName>
            </value>
            <value>
                <fullName>Other GLTBD</fullName>
            </value>
            <value>
                <fullName>Parking GL60340</fullName>
            </value>
            <value>
                <fullName>Postage GL60280</fullName>
            </value>
            <value>
                <fullName>Professional Development GL60220</fullName>
            </value>
            <value>
                <fullName>Showroom Expense GL60450</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>