force-app/main/default/objects/Expense_Line_Item__c/fields/Marketing_Fund_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Fund_Allocation__c</fullName>
    <label>Marketing Fund Allocation</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>