force-app/main/default/objects/Expense_Line_Item__c/fields/Mileage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Rate__c</fullName>
    <defaultValue>0.575</defaultValue>
    <label>Mileage Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>