force-app/main/default/objects/Expense_Line_Item__c/fields/Miles__c.field-meta.xml
<CustomField>
    <fullName>Miles__c</fullName>
    <label># Miles</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>