force-app/main/default/objects/Expense_Line_Item__c/fields/To_be_applied_to_vendor_marketing_fund__c.field-meta.xml
<CustomField>
    <fullName>To_be_applied_to_vendor_marketing_fund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To be applied to vendor marketing fund</label>
    <type>Checkbox</type>
</CustomField>