force-app/main/default/objects/Expense_Line_Item__c/fields/Vendor_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contribution__c</fullName>
    <label>Vendor Contribution</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>