force-app/main/default/objects/Expense_Line_Item__c/fields/Vendor_is_to_Re_imburse__c.field-meta.xml
<CustomField>
    <fullName>Vendor_is_to_Re_imburse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor is to Re-imburse</label>
    <type>Checkbox</type>
</CustomField>