force-app/main/default/objects/Expense_Line_Item__c/fields/Vendor_Marketing_Fund__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Marketing_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The vendor marketing fund associated with the line item expense</description>
    <label>Vendor Marketing Fund</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expense Line Items (Vendor Marketing Fund)</relationshipLabel>
    <relationshipName>Expense_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>