force-app/main/default/objects/Expense_Line_Item__c/fields/Vendor_Payment_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Payment_Recieved__c</fullName>
    <label>Vendor Payment Recieved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unpaid</fullName>
                <default>true</default>
                <label>Unpaid</label>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>