force-app/main/default/objects/Expense_Line_Item__c/validationRules/Custom_Relations_Expense_Description_Rqd.validationRule-meta.xml
<ValidationRule>
    <fullName>Custom_Relations_Expense_Description_Rqd</fullName>
    <active>true</active>
    <errorConditionFormula>ispickval( Expense_Type__c , &quot;Customer Relations GL50120&quot;) &amp;&amp;
isblank(  Related_Account__c )</errorConditionFormula>
    <errorDisplayField>Related_Account__c</errorDisplayField>
    <errorMessage>If Expense Type = Customer Relations, Account Field must be completed.</errorMessage>
</ValidationRule>