force-app/main/default/objects/Expense_Line_Item__c/validationRules/Mileage_expenses_must_enter_miles.validationRule-meta.xml
<ValidationRule>
    <fullName>Mileage_expenses_must_enter_miles</fullName>
    <active>true</active>
    <errorConditionFormula>and(ispickval( Expense_Type__c , &quot;Mileage GL50040&quot;), or( Miles__c =0,isblank(Miles__c)))</errorConditionFormula>
    <errorMessage>For mileage expenses, you must enter number of miles</errorMessage>
</ValidationRule>