force-app/main/default/objects/Expense_Line_Item__c/validationRules/Non_mileage_expenses_must_enter_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_mileage_expenses_must_enter_amount</fullName>
    <active>true</active>
    <errorConditionFormula>and( not(ispickval( Expense_Type__c , &quot;Mileage GL50040&quot;)),or( Amount__c =0 ,isnull(Amount__c)))</errorConditionFormula>
    <errorMessage>For non-mileage expenses, you must enter Amount</errorMessage>
</ValidationRule>