force-app/main/default/objects/Expense_Line_Item__c/validationRules/Other_Expense_Type_Description_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Expense_Type_Description_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ispickval( Expense_Type__c , &quot;Other GLTBD&quot;) &amp;&amp;
isblank( Details_of_Other_Expenses__c )</errorConditionFormula>
    <errorMessage>If Expense Type = Other, Details of Other Expenses must be completed.</errorMessage>
</ValidationRule>